# playwright_mcp_agent

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
src/playwright_mcp_agent/: __init__.py  __main__.py  agent_core.py  cli.py  llm_client.py  mcp_servers.py
test/: app.py  openai_test.py  scenario.md
